--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ Backend API for the DevCamper application to manage bootcamps, courses, revies, 
 <strong class="request-method border-success">POST</strong>
 &nbsp;
 {{URL}}/api/v1/users/</h4></a></div><div id=collapse-Users-CreateUser class="panel-collapse collapse"><div class=panel-body><h5 class="label label-default">Description</h5><br><small><p>Create New User (admin)</small><br><br><h5 class="label label-warning">Headers</h5><table class="table table-hover"><thead><tr><th>Key<th>Value<th>Description<tbody><tr><td>Content-Type<td>application/json<td><p>jSON Type</table><h5 class="label label-primary">Body</h5><span class=resp-prettyprint>{
-&#34;name&#34;: &#34;Atul Choudhary&#34;,
-&#34;email&#34;: &#34;jatatul7@gmail.com&#34;,
-&#34;password&#34;: &#34;atul1022&#34;,
+&#34;name&#34;: &#34;Rick Johnson&#34;,
+&#34;email&#34;: &#34;rick12@gmail.com&#34;,
+&#34;password&#34;: &#34;rick12345&#34;,
 &#34;role&#34;: &#34;user&#34;
 }</span><div class=clearfix></div></div></div></div><div class="panel panel-warning" id=jump-Users-UpdateaUser><div class=panel-heading><small class="pull-right text-muted">raw</small>
 <a class=text-warning data-toggle=collapse data-parent=#accordion-Users href=#collapse-Users-UpdateaUser><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Update a User</strong> &nbsp;|&nbsp;
